--- a/02-imc/index.html
+++ b/02-imc/index.html
@@ -7,7 +7,8 @@
         <link rel="stylesheet" href="./css/style.css" />
         <link rel="stylesheet" href="./css/input-text.css" />
         <link rel="stylesheet" href="./css/button.css" />
-        <script src="./js/main.js" defer></script>
+        <link rel="stylesheet" href="./css/input-range.css">
+        <script src="./js/main.js" defer type="module" ></script>
     </head>
     <body>
         <main>
@@ -18,13 +19,15 @@
                         <label>Nome:</label>
                         <input type="text" id="nome" required />
                     </div>
-                    <div class="input">
+                    <div class="range">
                         <label>Altura:</label>
-                        <input type="number" id="altura" required step="any"/>
+                        <span id="valor-altura">1.71</span>
+                        <input type="range" id="altura" min="0" max="3" step="0.2"/>
                     </div>
-                    <div class="input">
+                    <div class="range">
                         <label>Peso:</label>
-                        <input type="number" id="peso" required step="any"/>
+                        <span id="valor-peso">90</span>
+                        <input type="range" id="peso" min="0" max="300" step="0.1"/>
                     </div>
                 </form>
                 <button id="calcular" class="button template">Calcular</button>
